[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "xtuner"
description = "A Next-Generation Training Engine Built for Ultra-Large MoE Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "The XTuner Authors", email = "openmmlab@gmail.com"}
]
keywords = ["large language model", "parameter-efficient", "fine-tuning"]
classifiers = [
      "Development Status :: 4 - Beta",
      "License :: OSI Approved :: Apache Software License",
      "Operating System :: OS Independent",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Topic :: Utilities",
]
dependencies = [
  "astor",
  "bitsandbytes==0.45.0",
  "datasets<4.0.0",
  "einops",
  "loguru",
  "mmengine==0.11.0rc0",
  "openpyxl",
  "peft>=0.14.0",
  "scikit-image",
  "scipy",
  "SentencePiece",
  "tiktoken",
  "torch>=2.6.0",
  "torchvision",
  "transformers==4.52.0",
  "cyclopts",
  "transformers_stream_generator",
  "opencv-python-headless<=4.12.0.88",
  "pydantic",
  "tensorboard",
  "xxhash",
  "imageio",
  "timm",
  "codetiming",
  "GitPython",
  "mathruler",
  "pylatexenc",
  "py-libnuma",
]

[project.urls]
Homepage = "https://github.com/InternLM/xtuner"
Documentation = "https://xtuner.readthedocs.io/zh-cn/latest/"
Repository = "https://github.com/InternLM/xtuner"

[tool.hatch.version]
path = "xtuner/version.py"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
rl = [
  "ray[default]",
  "httpx",
  "fastapi",
  "uvicorn",
  "mathruler",
  "pylatexenc"
]
video = [
  "decord",
  "av",
]
all = [
  "jsonlines",
  "decord",
  "av",
  "ray[default]",
  "httpx",
  "fastapi",
  "uvicorn",
  "liger-kernel",
  "parametrize",
  "mathruler",
  "pylatexenc"
]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xtuner.v1.*"
ignore_missing_imports = false

# Copied from huggingface
[tool.ruff]
line-length = 119
exclude = [
    "modeling_*"
]

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823", "C408"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
